Additional options for enable QEMU_TARGET option
To enable ICOUNT opiton for QEMU it is necessary to enable previously
QEMU_TARGET option in Kconfig.board and set in _defconfig file
CONFIG_QEMU_ICOUNT_SHIFT value.

Signed-off-by: Piotr Golyzniak <piotr.golyzniak@nordicsemi.no>

--- a/boards/arm/qemu_nrf52840dk_nrf52840/qemu_nrf52840dk_nrf52840_defconfig
+++ b/boards/arm/qemu_nrf52840dk_nrf52840/qemu_nrf52840dk_nrf52840_defconfig
@@ -29,3 +29,8 @@ CONFIG_UART_CONSOLE=y
 
 # additional board options
 CONFIG_GPIO_AS_PINRESET=y
+
+#CONFIG_CORTEX_M_SYSTICK=y
+#CONFIG_RUNTIME_NMI=y
+#CONFIG_QEMU_ICOUNT=y
+#CONFIG_QEMU_ICOUNT_SHIFT=7
