bsim_bt: extend BabbleSimRun class
Signed-off-by: Piotr Golyzniak <piotr.golyzniak@nordicsemi.no>

--- a/tests/bluetooth/bsim_bt/bsim_test_advx/bs_testcase.yaml
+++ b/tests/bluetooth/bsim_bt/bsim_test_advx/bs_testcase.yaml
@@ -1,4 +1,7 @@
 tests:
   bluetooth.bsim.advx:
     platform_allow: nrf52_bsim
+    simulation_id: basic_advx  # TODO: change simulation_id to test name (which has to be unique)
+    testid_0: advx
+    testid_1: scanx
     tags: bluetooth
