--- a/tests/bluetooth/bsim_bt/bsim_test_gatt/bs_testcase.yaml
+++ b/tests/bluetooth/bsim_bt/bsim_test_gatt/bs_testcase.yaml
@@ -1,7 +1,27 @@
 tests:
   bluetooth.bsim.gatt:
     platform_allow: nrf52_bsim
-    simulation_id: gatt  # TODO: change simulation_id to test name (which has to be unique)
-    testid_0: gatt_client
-    testid_1: gatt_server
     tags: bluetooth
+    # TODO: currently Twister accepts only args in one string (without -D),
+    #  so it should be discussed if this list of extra args started with "-D"
+    #  are acceptable
+    extra_args:
+      - '-DCMAKE_C_FLAGS="-Werror"'
+      - "-DCONFIG_COVERAGE=y"
+      - "-DCMAKE_EXPORT_COMPILE_COMMANDS=ON"
+
+    bsim_config:
+      devices:
+        -
+          id: gatt_client
+          extra_run_args:
+            - "-v=3"
+        -
+          id: gatt_server
+          extra_run_args:
+            - "-v=4"
+      medium:
+        name: bs_2G4_phy_v1
+        sim_length: 60e6
+        extra_run_args:
+          - "-v=0"
